--- a/appsettings.json
+++ b/appsettings.json
@@ -1,3 +1,13 @@
 {
+  "LoopTimes": 5,
 
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System":  "Warning" 
+      } 
+    } 
+  } 
 }
